--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "framer-motion": "11.2.10"
   },
   "devDependencies": {
-    "autoprefixer": "10.4.19",
-    "postcss": "8.4.41",
-    "tailwindcss": "3.4.10",
-    "@tailwindcss/typography": "0.5.15"
-  }
+  "autoprefixer": "10.4.19",
+  "postcss": "8.4.41",
+  "tailwindcss": "3.4.10",
+  "@tailwindcss/typography": "0.5.15",
+  "typescript": "5.5.4",
+  "@types/react": "18.3.3",
+  "@types/node": "20.14.10"
 }
-
